<resources>
    <string name="app_name">App of Secrets</string>
    <string name="underage_user">Underage User</string>
    <string name="YouRnotOldEnough">You\'re not Old Enough to User this App</string>
    <string name="ThisContentIsNotForMinors">Content that contains sexual themes, violence, obscene, or other mature themes not suitable for young audiences. Age-restricted videos that aren\'t appropriate for viewers under 18</string>
    <string name="how_old">How old are you?</string>
    <string name="sorry_for_asking">Sorry, but we have to ask</string>
    <string name="chooseYourGame">Choose a game</string>
    <string name="dice_level">Level: </string>
    <string name="foreplaycombo11">"Tickle his/her bot, usually refers to stroke someone's ass "</string>
    <string name="foreplaycombo12">Tickle his/her navel, you can also tickle someone\'s belly</string>
    <string name="foreplaycombo13">Tickle someone\'s brest/chest, can also gentle touching their nipples</string>
    <string name="foreplaycombo14">Refers to tickle somenone\'s thigh, can also play with their feet</string>
    <string name="foreplaycombo15">Tickle someone\'s neck, refers to the same feeling as a dog</string>
    <string name="foreplaycombo21">Suck her/his ass, it usually refers to asshole sucking</string>
    <string name="foreplaycombo22">Suck someone\'s brest, can do a baby trying to eat from her mothers brest</string>
    <string name="foreplaycombo23">Suck a finger with desire, your know what we mean</string>
    <string name="foreplaycombo24">Suck someone\'s neck, when we were younger we all have given someone a hickey, first start gently and than you can go harder and hader</string>
    <string name="foreplaycombo31">squiz that someone special\'s ass, lose yourself into it</string>
    <string name="foreplaycombo33">Squiz someone\'s brest/chest. This is very relaxing</string>
    <string name="foreplaycombo34">Caress their leg, also sometimes you can touch their intimate parts, to keep it exciting</string>
    <string name="foreplaycombo35">Caress her/his neck, littles things like moving your finger in the right spot</string>
    <string name="foreplaycombo36">Touch that person\'s lips, slowly with all the intent to kiss</string>
    <string name="foreplaycombo41">Take small bites out of her/his ass, remember not to hurt your couple</string>
    <string name="foreplaycombo42">Nibble their navel, can also take little bites of their belly, remember not to hurt them</string>
    <string name="foreplaycombo43">Gently bite their brest/chest, mostly focus on their nipples</string>
    <string name="foreplaycombo44">Take a small bite of their legs</string>
    <string name="foreplaycombo45">This is a bonus 2 in 1, kiss your couple, but the main focus is not the kissing with your lips grab his/her lips and hold them for a moment</string>
    <string name="foreplaycombo51">Lick her/his back side, can focus on their asshole and also move to their front side</string>
    <string name="foreplaycombo52">Lick all around their navel, can also move around their belly and even move to the south. For some extra fun</string>
    <string name="foreplaycombo53">Lick their brest/chest, focus on playing with your toungh and their nipples</string>
    <string name="foreplaycombo54">Move the tip of your toungh from their feet to their crutch. It can easily end in oral</string>
    <string name="foreplaycombo55">With the tip of your toungh lick their neck and also can alternate with some licking behaind their ears</string>
    <string name="foreplaycombo61">Kiss their back side, it can be al around and some random kiss to their asshole</string>
    <string name="foreplaycombo62">Kiss all around the belly and also kiss their navel</string>
    <string name="foreplaycombo63">Kiss their breast/chest, but also you can focus on your couple\'s nipple</string>
    <string name="foreplaycombo64">You can kiss form their feet to their crutch, this can lead to some oral fun</string>
    <string name="foreplaycombo65">Can gently kiss all around their neck and back behaind their ears</string>
    <string name="foreplaycombo66">kiss their mouth, try to spyce it up in some places or touching some body parts with desire</string>
    <string name="selfexplenatory">We beleive this is self-explanatory. Have fun</string>
    <string name="how_key">How?\n</string>
    <string name="why_key">Why?\n</string>
    <string name="description_key">Description:\n</string>
    <string name="question_mark">\?</string>
    <string name="search_hint">Search a video...</string>
    <string name="popular_key">Popular</string>
    <string name="for_women_key">For Women</string>
    <string name="for_men_key">For Men</string>
    <string name="open_with">Choose an item to play the video</string>
    <string name="open_with_default">Always open with this item</string>
    <string name="cat1">One Night Stand</string>
    <string name="cat0">Unknown</string>
    <string name="filter">Filters</string>
    <string name="apply">APPLY</string>
    <string name="sw_geolocation">Location Mode</string>
    <string name="mock">Mock</string>
    <string name="real">Real</string>
    <string name="set_coordinates">Insert your coordinates</string>
    <string name="radius">Radius</string>
    <string name="categories">Categories</string>
    <string name="submit_place">Submit a new place</string>
    <string name="newPlaceName">Add a new place</string>
    <string name="name">Name</string>
    <string name="place_name">Place\'s Name</string>
    <string name="place_country">Country</string>
    <string name="state">State or Province</string>
    <string name="image">Image</string>
    <string name="choos_a_pic">Choose a picture from your gallery</string>
    <string name="submit">Submit</string>
    <string name="success">Success</string>
    <string name="request_successfully_submited">Your Request Successfully Submited</string>
    <string name="map">Map</string>
    <string name="pick_location">Pin the new location in the Map</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="important">Important</string>
    <string name="new_place_next_step">For the next step we need a picture to identify the place</string>
    <string name="please_complete_the_form">Please complete the form before submitting the place</string>
    <string name="okey">Okey</string>
    <string name="error">Error</string>
    <string name="error_has_occurred">An error has occurred. Please try again later</string>
    <string name="verified">VERIFIED</string>
    <string name="sw_verified">Verified Places</string>
    <string name="any">Anything</string>
    <string name="filter_verified_places">Filter between verified or all places</string>
    <string-array name="game_level">
        <item>FOREPLAY</item>
        <item>SEXPLAY</item>
    </string-array>
    <string-array name="categories">
        <item>Any</item>
        <item>One night stand</item>
        <item>Hotel</item>
        <item>Food</item>
        <item>Recreation</item>
    </string-array>

</resources>