<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_roudend_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitleUnderage"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/underage_user"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/imgBlockApp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tvTitleUnderage"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_baseline_app_blocking_24"
            android:scaleType="fitXY"
            android:layout_width="175dp"
            android:layout_height="200dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_below="@id/imgBlockApp"
            android:id="@+id/tvYouRnotOldEnough"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/YouRnotOldEnough"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_below="@id/tvYouRnotOldEnough"
            android:id="@+id/tvThisContentIsNotForMinors"
            android:textSize="18sp"
            android:text="@string/ThisContentIsNotForMinors"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/notOldEnoughAppel"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/tvThisContentIsNotForMinors"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_rounded_corner"
            android:text="Appel"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:background="@drawable/button_rounded_corner_cancel"
            android:id="@+id/notOldEnoughCancel"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/notOldEnoughAppel"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="Cancel" />
    </RelativeLayout>

</RelativeLayout>